# pay-sdk

./: .gitignore  CLAUDE.md  README.cn.md  README.md
golang/: auth.go  (+16 more)
python/: pyproject.toml
python/novax_sdk/: __init__.py  client.py  config.py  exceptions.py  model.py
python/novax_sdk/auth/: __init__.py  credentials.py
python/novax_sdk/http/: __init__.py  interceptor.py  interceptor_chain.py  sdk_request.py  sdk_response.py  signature_codec.py  transport.py
python/novax_sdk/http/interceptors/: __init__.py  header_interceptor.py  logging_interceptor.py  signature_interceptor.py
python/novax_sdk/pay/h5/: __init__.py  h5_address_request.py  h5_confirm_request.py  h5_ok_time_request.py  h5_order_request.py  h5_order_status_request.py  h5_protocols_request.py  pay_token_request.py
python/novax_sdk/pay/model/: __init__.py  models.py
python/novax_sdk/pay/qrcode/: __init__.py  dynamic_qr_pay_create_request.py
python/novax_sdk/pay/receipt/: __init__.py  receipt_add_order_request.py  receipt_address_request.py  receipt_confirm_request.py  (+2 more)
python/novax_sdk/request/: __init__.py  api_request.py
python/tests/: test_h5.py  test_pay_token.py  test_qrcode.py  test_receipt.py  test_signature_codec.py  test_withdraw.py
rust/: Cargo.toml
rust/src/: auth.rs  client.rs  error.rs  lib.rs  model.rs  request.rs
rust/src/http/: interceptor.rs  mod.rs  signature_codec.rs  transport.rs
rust/src/pay/: h5.rs  mod.rs  model.rs  qrcode.rs  receipt.rs  withdraw.rs
rust/tests/: h5_test.rs  qrcode_test.rs  receipt_test.rs  withdraw_test.rs
rust/tests/common/: mod.rs
(+105 files in other folders)
