[package]
name    = "novax-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hmac         = "0.12"
sha2         = "0.10"
hex          = "0.4"
thiserror    = "2"
log          = "0.4"
urlencoding  = "2"
rust_decimal = { version = "1", features = ["serde-with-str"] }

[dev-dependencies]
env_logger = "0.11"
